refact(consumer, swagger): enhance routes description for swagger docs
